RESOLVED FIXED141798
WebsiteDataStore should ensure that local storage is written before exiting
https://bugs.webkit.org/show_bug.cgi?id=141798
Summary WebsiteDataStore should ensure that local storage is written before exiting
Anders Carlsson
Reported 2015-02-19 10:06:16 PST
WebsiteDataStore should ensure that local storage is written before exiting
Attachments
Patch (10.42 KB, patch)
2015-02-19 10:07 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2015-02-19 10:07:27 PST
WebKit Commit Bot
Comment 2 2015-02-19 10:09:43 PST
Attachment 246895 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/WebsiteData/Cocoa/WebsiteDataStoreCocoa.mm:56: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2015-02-19 10:46:10 PST
Csaba Osztrogonác
Comment 4 2015-02-19 11:26:13 PST
(In reply to comment #3) > Committed r180349: <http://trac.webkit.org/changeset/180349> non Cocoa buildfix landed in http://trac.webkit.org/changeset/180350, I only added empty functions to fix the build, but I have no idea if EFL/GTK use this code or not, should add platform specific implemenation or not. Please let us know if we have to do something.
Note You need to log in before you can comment on or make changes to this bug.