WebsiteDataStore should ensure that local storage is written before exiting https://bugs.webkit.org/show_bug.cgi?id=141798

Reviewed by Sam Weinig.

* UIProcess/WebsiteData/Cocoa/WebsiteDataStoreCocoa.mm: Added.
(WebKit::dataStoresWithStorageManagers):
(WebKit::WebsiteDataStore::platformInitialize):
(WebKit::WebsiteDataStore::platformDestroy):
* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::WebsiteDataStore):
(WebKit::WebsiteDataStore::~WebsiteDataStore):
* UIProcess/WebsiteData/WebsiteDataStore.h:
* WebKit2.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/159821@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180349 268f45cc-cd09-0410-ab3c-d52691b4dbfc